# waggle

./: Cargo.toml  LICENSE-MIT  README.md
forager/: Cargo.toml
forager-bencode/: Cargo.toml
forager-bencode/src/: de.rs  error.rs  ser.rs
forager-bencode/tests/: deserialization.rs  serialization.rs
waggle/: Cargo.toml
waggle-bencode/: Cargo.toml
waggle-bencode/src/: de.rs  error.rs  lib.rs  ser.rs
waggle-bencode/src/ser/: error.rs  mod.rs  result.rs  serializer.rs  tests.rs
waggle-bencode/tests/: deserialization.rs  serialization.rs
