[workspace]
resolver = "3"
members = ["forager", "forager-bencode"]

[workspace.package]
license = "MIT OR Apache-2.0"
readme = "README.md"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/davidfornesm/forager"
description = "Forager intends to become an independent, correct and performant BitTorrent client written purely in Rust."
publish = true
