[package]
name = "waggle-bencode"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
description.workspace = true
publish.workspace = true

[dependencies]
itoa = "1.0.18"
nom = "8.0.0"
serde = { version = "1.0.228", features = ["derive"] }
